--- a/src/CSSes/index.css
+++ b/src/CSSes/index.css
@@ -4,4 +4,8 @@
 @tailwind utilities;
 :root {
   font-family: "Karla", sans-serif;
+}
+
+main > div {
+  padding: 44px 40px 40px;
 }/*# sourceMappingURL=index.css.map */
